fix text centering on small screens

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ header {
   z-index: 10;
   position: fixed;
   top: 40%;
-  left: 30%;
   text-align: center;
+  width: 100%;
 }
 
 h1 {
